--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/background-img.jpg);
+    url(../images/background-img.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
