--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,7 @@ img {
 
 .nav-link:hover,
 .nav-link:focus {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #404bbf;
 }
 
@@ -137,6 +138,7 @@ img {
 
 .contacts-link:hover,
 .contacts-link:focus {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #404bbf;
 }
 
@@ -145,7 +147,7 @@ img {
 /* Hero styles start */
 
 .hero-section {
-  width: auto;
+  max-width: 1440px; 
   background-color: #2e2f42;
   background-image: linear-gradient(
       to bottom,
@@ -191,6 +193,7 @@ img {
 
 .order-service-btn:hover,
 .order-service-btn:focus {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #404bbf;
 }
 
@@ -308,6 +311,7 @@ img {
 }
 
 .team-item-social-link {
+  
   width: 40px;
   height: 40px;
   display: flex;
@@ -315,11 +319,13 @@ img {
   justify-content: center;
   background-color: #4d5ae5;
   border: #4d5ae5;
+  fill: #f4f4fd; 
   border-radius: 50%;
 }
 
 .team-item-social-link:hover,
 .team-item-social-link:focus {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #404bbf;
 }
 
@@ -453,11 +459,13 @@ img {
   justify-content: center;
   background-color: #4d5ae5;
   border: #4d5ae5;
+  fill: #f4f4fd; 
   border-radius: 50%;
 }
 
 .footer-item-social-link:hover,
 .footer-item-social-link:focus {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #31d0aa;
 }
 
