--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ img {
 
 .header-page {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -91,6 +92,22 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link.current {
+  position: relative;
+}
+
+.nav-link.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
 }
 
 .logo-top {
@@ -107,12 +124,6 @@ img {
 
 .header-logo .header-logo-part {
   color: #2e2f42;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: #404bbf;
 }
 
 .contacts {
@@ -134,11 +145,14 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.nav-link:hover,
+.nav-link:focus,
 .contacts-link:hover,
-.contacts-link:focus {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.contacts-link:focus,
+.nav-link.current {
   color: #404bbf;
 }
 
@@ -147,7 +161,7 @@ img {
 /* Hero styles start */
 
 .hero-section {
-  max-width: 1440px; 
+  max-width: 1440px;
   background-color: #2e2f42;
   background-image: linear-gradient(
       to bottom,
@@ -189,11 +203,11 @@ img {
   background-color: #4d5ae5;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-service-btn:hover,
 .order-service-btn:focus {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #404bbf;
 }
 
@@ -311,7 +325,6 @@ img {
 }
 
 .team-item-social-link {
-  
   width: 40px;
   height: 40px;
   display: flex;
@@ -319,13 +332,13 @@ img {
   justify-content: center;
   background-color: #4d5ae5;
   border: #4d5ae5;
-  fill: #f4f4fd; 
+  fill: #f4f4fd;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-item-social-link:hover,
 .team-item-social-link:focus {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #404bbf;
 }
 
@@ -459,13 +472,13 @@ img {
   justify-content: center;
   background-color: #4d5ae5;
   border: #4d5ae5;
-  fill: #f4f4fd; 
+  fill: #f4f4fd;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-item-social-link:hover,
 .footer-item-social-link:focus {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #31d0aa;
 }
 
