--- a/css/styles.css
+++ b/css/styles.css
@@ -381,7 +381,12 @@ img {
   width: calc((100% - 48px) / 3);
 }
 
-.portfolio-img-wrapper {
+.portfolio-list-item:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+  0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.overlay-wrapper {
   position: relative;
   overflow: hidden;
 }
@@ -413,7 +418,12 @@ img {
   letter-spacing: 0.02em;
 }
 
-.portfolio-overlay {
+.portfolio-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
   position: absolute;
   top: 0;
   left: 0;
@@ -421,23 +431,13 @@ img {
   height: 100%;
   background-color: #4d5ae5;
   overflow: auto;
-  padding: 40px 32px 0;
+  padding: 40px 32px 164px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  }
 
-.portfolio-list-item .portfolio-overlay {
+  .portfolio-text:hover {
   transform: translateY(0%);
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-
-.overlay-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
 }
 
 /* Our Portfolio styles end */
