--- a/css/styles.css
+++ b/css/styles.css
@@ -379,6 +379,7 @@ img {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .portfolio-list-item:hover {
@@ -431,14 +432,13 @@ img {
   height: 100%;
   background-color: #4d5ae5;
   overflow: auto;
-  padding: 40px 32px 164px;
+  padding: 40px 32px;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .portfolio-text:hover {
-  transform: translateY(0%);
-}
+    transform: translateY(0%);
+  }
 
 /* Our Portfolio styles end */
 /* ----------------------------------------- */
