--- a/css/styles.css
+++ b/css/styles.css
@@ -434,9 +434,10 @@ img {
   overflow: auto;
   padding: 40px 32px;
   transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
 
-  .portfolio-text:hover {
+  .portfolio-list-item .portfolio-text:hover {
     transform: translateY(0%);
   }
 
