--- a/css/styles.css
+++ b/css/styles.css
@@ -437,7 +437,8 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
 
-  .portfolio-list-item .portfolio-text:hover {
+  .portfolio-list-item:hover
+  .portfolio-text:hover {
     transform: translateY(0%);
   }
 
