--- a/css/styles.css
+++ b/css/styles.css
@@ -379,12 +379,12 @@ img {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-  0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .overlay-wrapper {
@@ -434,13 +434,12 @@ img {
   overflow: auto;
   padding: 40px 32px;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-  }
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  .portfolio-list-item:hover
-  .portfolio-text:hover {
-    transform: translateY(0%);
-  }
+.portfolio-list-item:hover .portfolio-text {
+  transform: translateY(0%);
+}
 
 /* Our Portfolio styles end */
 /* ----------------------------------------- */
