--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ img {
   background-position: center center;
   background-size: cover;
   color: #fff;
+  margin: 0 auto;
 }
 
 .main-title {
@@ -305,7 +306,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
   text-align: center;
 }
 
@@ -315,7 +316,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .team-social-list {
